--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -129,4 +129,5 @@
     <dimen name="keyboard_radius">2dp</dimen>
     <dimen name="keyboard_height">123dp</dimen>
 
+    <dimen name="bet_button_height">45dp</dimen>
 </resources>
