--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="6dp"
         android:text="@string/bet_slip"
         android:textAllCaps="true"
-        android:textColor="@color/color_414655"
+        android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/viewLeftLine"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_2"
-        android:textColor="@color/color_414655"
+        android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_balance"
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_10"
-        android:textColor="@color/color_414655"
+        android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_arrow"
