--- a/app/src/main/res/drawable/bg_gradient_bet_total.xml
+++ b/app/src/main/res/drawable/bg_gradient_bet_total.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="0"
-        android:endColor="@color/color_FFFFFF"
+        android:endColor="@color/color_202541_FFFFFF"
         android:startColor="@color/color_FAFCFF"
         android:type="linear" />
 </shape>
