--- a/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
+++ b/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
@@ -19,7 +19,7 @@
             <stroke
                 android:width="1dp"
                 android:color="@color/color_6BABFF" />
-            <solid android:color="@color/color_FFFFFF" />
+            <solid android:color="@color/color_202541_FFFFFF" />
         </shape>
     </item>
 </layer-list>
