--- a/app/src/main/res/drawable/bg_radius_2_edittext_unfocus.xml
+++ b/app/src/main/res/drawable/bg_radius_2_edittext_unfocus.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_A7B2C4" />
-    <solid android:color="@color/color_FFFFFF" />
+        android:color="@color/color_6C7BA8_A7B2C4" />
+    <solid android:color="@color/color_202541_FFFFFF" />
 </shape>
