--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -77,7 +77,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:textColor="@color/color_414655"
+                        android:textColor="@color/color_FFFFFF_414655"
                         android:textSize="@dimen/textSize14sp"
                         tools:text="Manchester United FC (Mad)" />
 
@@ -87,7 +87,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:maxLines="1"
-                        android:textColor="@color/color_414655"
+                        android:textColor="@color/color_FFFFFF_414655"
                         android:textSize="@dimen/textSize14sp"
                         tools:text="-0.5/2" />
                 </LinearLayout>
@@ -107,7 +107,7 @@
                         android:id="@+id/tvOdds"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/color_025BE8"
+                        android:textColor="@color/color_025BE8_025BE8"
                         android:textSize="@dimen/margin_14"
                         android:textStyle="bold"
                         tools:text="\@ 0.89" />
@@ -130,7 +130,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="6dp"
                     android:drawablePadding="8dp"
-                    android:textColor="@color/color_535D76"
+                    android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize14sp"
                     app:drawableStartCompat="@drawable/ic_detail_odd_title_line"
                     app:layout_constraintBottom_toTopOf="@+id/tv_match"
@@ -153,7 +153,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:textColor="@color/color_6C7BA8"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize13sp"
                     android:layout_marginStart="21dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:textColor="@color/color_6C7BA8"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize13sp"
                     android:layout_marginStart="21dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -181,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:textColor="@color/color_6C7BA8"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize13sp"
                     android:layout_marginStart="21dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -198,7 +198,7 @@
                     android:paddingHorizontal="7dp"
                     android:paddingVertical="1dp"
                     android:text="@string/delete_bet"
-                    android:textColor="@color/color_535D76"
+                    android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_start_time"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -224,7 +224,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/bet_win"
-                        android:textColor="@color/color_535D76"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/et_win"
                         app:layout_constraintStart_toStartOf="parent"
@@ -241,7 +241,7 @@
                         android:letterSpacing="0.05"
                         android:maxLength="14"
                         android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         android:textStyle="bold"
                         android:visibility="visible"
@@ -255,7 +255,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_C9CFD7"
+                        android:textColor="@color/color_455074_C9CFD7"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/et_win"
@@ -270,7 +270,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:text="@string/bet_info_list_bet"
-                        android:textColor="@color/color_535D76"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/et_bet"
                         app:layout_constraintStart_toStartOf="@+id/guideline_input"
@@ -288,7 +288,7 @@
                         android:letterSpacing="0.05"
                         android:maxLength="14"
                         android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         android:textStyle="bold"
                         android:visibility="visible"
@@ -301,7 +301,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_C9CFD7"
+                        android:textColor="@color/color_455074_C9CFD7"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/et_bet"
@@ -384,7 +384,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <!-- 提示文字 start -->
+                <!--region 提示文字 -->
                 <LinearLayout
                     android:id="@+id/ll_single_tips"
                     android:layout_width="match_parent"
@@ -401,7 +401,7 @@
                         android:includeFontPadding="false"
                         android:paddingTop="@dimen/margin_8"
                         android:text="@string/bet_info_bet_balance_insufficient"
-                        android:textColor="@color/color_E44438_e44438"
+                        android:textColor="@color/color_E23434_E23434"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
                         tools:visibility="visible" />
@@ -415,7 +415,7 @@
                         android:includeFontPadding="false"
                         android:paddingTop="@dimen/margin_8"
                         android:text="@string/bet_info_list_minimum_limit_amount"
-                        android:textColor="@color/color_E44438_e44438"
+                        android:textColor="@color/color_E23434_E23434"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
                         tools:visibility="visible" />
@@ -429,13 +429,13 @@
                         android:includeFontPadding="false"
                         android:paddingTop="@dimen/margin_8"
                         android:text="@string/please_enter_correct_amount"
-                        android:textColor="@color/color_E44438_e44438"
+                        android:textColor="@color/color_E23434_E23434"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
                         tools:visibility="visible" />
 
                 </LinearLayout>
-                <!-- 提示文字 end -->
+                <!--endregion 提示文字 -->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
