--- a/app/src/main/res/layout/item_bet_list_tab.xml
+++ b/app/src/main/res/layout/item_bet_list_tab.xml
@@ -26,7 +26,7 @@
         android:layout_width="1dp"
         android:layout_height="0dp"
         android:layout_marginVertical="13dp"
-        android:background="@color/color_E3E8EE"
+        android:background="@color/color_80334266_E3E8EE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
