--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -126,5 +126,25 @@
     <!--endregion 特殊處理顏色-->
     <color name="color_E8EFFD">#E8EFFD</color>
 
+    <!--region 新UI 日夜間色系-->
+    <color name="color_FFFFFF_414655">@color/color_FFFFFF</color>
+    <color name="color_9BB3D9_535D76">@color/color_9BB3D9</color>
+    <color name="color_6C7BA8_6C7BA8">@color/color_6C7BA8</color>
+    <color name="color_6C7BA8_A7B2C4">@color/color_6C7BA8</color>
+    <color name="color_455074_C9CFD7">@color/color_455074</color>
+
+    <color name="color_80334266_E3E8EE">@color/color_80334266</color>
+    <color name="color_2B3859_E3E8EE">@color/color_2B3859</color>
+
+    <color name="color_71ADFF_71ADFF">@color/color_71ADFF</color>
+    <color name="color_025BE8_025BE8">@color/color_025BE8</color>
+    <color name="color_D35555_D35555">@color/color_D35555</color>
+    <color name="color_FF9855_FF9855">@color/color_FF9855</color>
+
+    <color name="color_141931_F9F9F9">@color/color_141931</color>
+    <color name="color_DCB345_ECCD86">@color/color_DCB345</color>
+    <color name="color_131932_F0F5FA">@color/color_131932</color>
+    <color name="color_202541_FFFFFF">@color/color_202541</color>
+    <!--endregion 新UI 日夜間色系-->
 
 </resources>
