--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -379,6 +379,14 @@
     <color name="color_996A7797">#996A7797</color>
     <color name="color_33FFAB2E">#33FFAB2E</color>
     <color name="color_E38902">#E38902</color>
+    <color name="color_9BB3D9">#9BB3D9</color>
+    <color name="color_455074">#455074</color>
+    <color name="color_80334266">#80334266</color>
+    <color name="color_2B3859">#2B3859</color>
+    <color name="color_141931">#141931</color>
+    <color name="color_DCB345">#DCB345</color>
+    <color name="color_131932">#131932</color>
+    <color name="color_202541">#202541</color>
 
 
     <color name="color_E8EFFD">#E8EFFD</color>
@@ -414,4 +422,26 @@
     <color name="color_FDFBFA">#FDFBFA</color>
     <color name="color_EDEEF5">#EDEEF5</color>
     <!--endregion keyboard-->
+
+    <!--region 新UI 日夜間色系-->
+    <color name="color_FFFFFF_414655">@color/color_414655</color>
+    <color name="color_9BB3D9_535D76">@color/color_535D76</color>
+    <color name="color_6C7BA8_6C7BA8">@color/color_6C7BA8</color>
+    <color name="color_6C7BA8_A7B2C4">@color/color_A7B2C4</color>
+    <color name="color_455074_C9CFD7">@color/color_C9CFD7</color>
+
+    <color name="color_80334266_E3E8EE">@color/color_E3E8EE</color>
+    <color name="color_2B3859_E3E8EE">@color/color_E3E8EE</color>
+
+    <color name="color_71ADFF_71ADFF">@color/color_71ADFF</color>
+    <color name="color_025BE8_025BE8">@color/color_025BE8</color>
+    <color name="color_D35555_D35555">@color/color_D35555</color>
+    <color name="color_FF9855_FF9855">@color/color_FF9855</color>
+
+    <color name="color_141931_F9F9F9">@color/color_F9F9F9</color>
+    <color name="color_DCB345_ECCD86">@color/color_ECCD86</color>
+    <color name="color_131932_F0F5FA">@color/color_F0F5FA</color>
+    <color name="color_202541_FFFFFF">@color/color_FFFFFF</color>
+    <!--endregion 新UI 日夜間色系-->
+
 </resources>
